# ChangeLog for media-gfx/grace
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/grace/ChangeLog,v 1.15 2003/10/30 08:52:59 usata Exp $

  30 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.10-r1.ebuild,
  grace-5.1.12-r1.ebuild, grace-5.1.13.ebuild:
  Removed browsers from DEPEND, see Bug #32290

  30 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.12-r1.ebuild,
  grace-5.1.13.ebuild:
  Added fftw and netcdf local IUSE flags, as suggested by Donnie Berkholz
  <spyderous@gentoo.org> in Bug #26842

*grace-5.1.13 (27 Oct 2003)

  27 Oct 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.10-r1.ebuild,
  grace-5.1.10.ebuild, grace-5.1.12-r1.ebuild, grace-5.1.12.ebuild,
  grace-5.1.13.ebuild, files/grace-helpviewer-gentoo.diff:
  Version bumped. Marked 5.1.10-r1 and 5.1.12-r1 stable for x86.
  Removed 5.1.10 and 5.1.12 (since -r1 are in there).  Fixed
  environment variable settings in 10grace.

*grace-5.1.12-r1 (09 Sep 2003)

  09 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.10-r1.ebuild,
  grace-5.1.12-r1.ebuild:
  Fixed browsers dependency.  This closes Bug #23292

*grace-5.1.12 (18 Aug 2003)

  19 Aug 2003; MATSUU Takuto <matsuu@gentoo.org> grace-5.1.12.ebuild:
  Added ~sparc to KEYWORDS.

  18 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.12.ebuild,
  files/grace-5.1.12-t1lib-fix-gentoo.patch:
  Version bump.  New debug, png and jpeg IUSE flags.  Added
  dev-libs/fftw and app-sci/netcdf to DEPEND.  Thanks to MATSUU Takuto
  <matsuu@gentoo.org> in bug #26842

*grace-5.1.10 (05 Nov 2002)

  09 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> grace-5.1.10.ebuild,
  files/grace-5.1.10-t1lib-fix-gentoo.patch:
  Added t1lib DEPEND and a patch to compile grace against t1lib-5.0.0.
  Patch submitted by Derek Dolney <dolney@astro.physics.upenn.edu>
  in bug #25798

  30 Mar 2003; Alastair Tse <liquidx@gentoo.org> grace-5.1.10.ebuild,
  grace-5.1.7-r2.ebuild: